Fix overflow on mobile pages for home

--- a/pages/OurProducts/products.module.css
+++ b/pages/OurProducts/products.module.css
@@ -221,14 +221,15 @@
 		font-weight: 500;
 	}
 	.separatorHyphen{
-		width: 1rem;
+		width: 1ch;
 	}
 	.goldTypeContainer{
 		padding: 0;
 		margin-left:1rem;
 	}
 	.goldTypeContainer:not(:last-child) {
-		margin-right: 1rem;
+		margin-right: -0.9rem;
+		margin-left: 0.8rem;
 	}
 	.goldTypeContainer{
 		margin-top:0vh;
